--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
   </head>
   <body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="mentor.html">Mentor</a>
+    </nav>
     <h1>Hello Dev Mentor</h1>
     <p>Nous somme ravis de vous aider</p>
   </body>
