--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="mentor.html">Mentor</a>
+      <a href="index.html">Home</a>
+      <a href="mentor.html">Mentor</a>
     </nav>
     <h1>Hello Dev Mentor</h1>
-    <p>Nous somme ravis de vous aider</p>
+    <h2>Welcome to the Dev Mentor</h2>
   </body>
 </html>
